fix endpoint definition
