# controller/guildstash-controller.go
@@ -164,7 +164,7 @@ func (e *GuildStashController) switchStashFetch() gin.HandlerFunc {
 // @Param eventId path int true "Event Id"
 // @Param stash_id path string true "Stash Tab Id"
 // @Success 200 {array} client.DisplayItem
-// @Router /{eventId}/guild-stash [get]
+// @Router /{eventId}/guild-stash/{stash_id}  [get]
 func (e *GuildStashController) getGuildStashTab() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		event := getEvent(c)
