# docs/swagger.json
@@ -1990,26 +1990,19 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Fetches a specific guild stash tab",
+                "description": "Fetches all guild stash tabs for a user",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "guild-stash"
                 ],
-                "operationId": "GetGuildStashTab",
+                "operationId": "GetGuildStashForUser",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "Event Id",
                         "name": "eventId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Stash Tab Id",
-                        "name": "stash_id",
                         "in": "path",
                         "required": true
                     }
@@ -2020,7 +2013,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/DisplayItem"
+                                "$ref": "#/definitions/GuildStashTab"
                             }
                         }
                     }
@@ -2063,6 +2056,48 @@
             }
         },
         "/{eventId}/guild-stash/{stash_id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Fetches a specific guild stash tab",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "guild-stash"
+                ],
+                "operationId": "GetGuildStashTab",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Event Id",
+                        "name": "eventId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Stash Tab Id",
+                        "name": "stash_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/DisplayItem"
+                            }
+                        }
+                    }
+                }
+            },
             "patch": {
                 "security": [
                     {
